--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JsAdvanced</title>
+    <title>NIM game</title>
     <link rel="stylesheet" href="./assets/css/base.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
     <script defer src="./assets/script/script.js"></script>
@@ -15,7 +15,7 @@
     <input type="text" id="input" />
     <button class="button">Add</button>
     <!--  -->
-    <div class="start"><button>Start</button></div>
+    <div class="start"><button id="start">Start</button></div>
     <!--  -->
     <div class="btnGr">
       <label for="inputHeap">Choose heap stone</label>
